[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/QuitMenu/ConfirmQuitting.gd" type="Script" id=1]
[ext_resource path="res://UI/QuitMenu/QuitManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/Chad/chad_round.png" type="Texture" id=3]
[ext_resource path="res://UI/QuitMenu/CheckQuit.gd" type="Script" id=4]
[ext_resource path="res://Fotos/NotConfirmButtonSelected.png" type="Texture" id=5]
[ext_resource path="res://Fotos/DiceBackground.png" type="Texture" id=6]
[ext_resource path="res://Fotos/NotConfirmButton.png" type="Texture" id=7]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://SavingSystem/LoadSavedScene/LoadSavedScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/dice_preview.tres" type="DynamicFont" id=10]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=11]
[ext_resource path="res://Fonts/card_preview2.tres" type="DynamicFont" id=12]
[ext_resource path="res://Fotos/SmallerConfirmButtonSelected.png" type="Texture" id=13]
[ext_resource path="res://Fotos/SmallerConfirmButton.png" type="Texture" id=14]

[node name="CheckQuit" type="Spatial"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.000868201
anchor_top = -0.00148168
anchor_right = 1.00087
anchor_bottom = 0.998518
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.00183105
margin_bottom = 398.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitManager" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.598
anchor_right = 0.5
anchor_bottom = 0.598
margin_left = -269.5
margin_top = -202.8
margin_right = 269.5
margin_bottom = 203.2
rect_pivot_offset = Vector2( 388.889, 585.786 )
color = Color( 0.964706, 0.921569, 0.862745, 0.784314 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitInfo" type="VBoxContainer" parent="Control/QuitManager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.5
margin_top = -199.335
margin_right = 214.5
margin_bottom = 143.665
rect_scale = Vector2( 1.11393, 1.15982 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/QuitManager/QuitInfo"]
margin_right = 485.0
margin_bottom = 100.0
size_flags_horizontal = 7

[node name="PlayerName" type="Label" parent="Control/QuitManager/QuitInfo/HBoxContainer"]
margin_left = 151.0
margin_top = 28.0
margin_right = 320.0
margin_bottom = 72.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Jogador X"
align = 1
valign = 1

[node name="Avatar" type="TextureRect" parent="Control/QuitManager/QuitInfo/HBoxContainer"]
margin_left = 385.0
margin_right = 485.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Control/QuitManager/QuitInfo"]
margin_left = 42.0
margin_top = 117.0
margin_right = 442.0
margin_bottom = 237.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
custom_fonts/font = ExtResource( 12 )
text = "Tem a certeza que quer terminar o jogo para todos os jogadores?"
align = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/QuitManager/QuitInfo"]
margin_left = 160.0
margin_top = 263.0
margin_right = 325.0
margin_bottom = 333.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotConfirm" type="TextureButton" parent="Control/QuitManager/QuitInfo/HBoxContainer2"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="TextureButton" parent="Control/QuitManager/QuitInfo/HBoxContainer2"]
margin_left = 95.0
margin_right = 165.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMapSceneButton" type="Button" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
custom_fonts/font = ExtResource( 11 )
text = "LOAD MAP SCENE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSavedScene" parent="." instance=ExtResource( 9 )]

[node name="UISoundManager" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="Control/QuitManager/QuitInfo/HBoxContainer2/NotConfirm" to="Control/QuitManager/QuitInfo/HBoxContainer2/NotConfirm" method="go_back_game"]
[connection signal="pressed" from="Control/QuitManager/QuitInfo/HBoxContainer2/Confirm" to="Control/QuitManager/QuitInfo/HBoxContainer2/Confirm" method="quit"]
[connection signal="pressed" from="Control/LoadMapSceneButton" to="LoadSavedScene" method="load_saved_scene"]
